Fix spacing around image

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ body {
 main {
     margin-top: 1em;
     background-color: var(--background-secondary);
-    max-width: 28rem;
+    max-width: 32rem;
     border-radius: 1em;
     position: relative;;
     padding: 2.4em 0;
